# maiforge

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: DEVELOPER_GUIDE.md
examples/ferrite_core/: mod.json
examples/ferrite_core/ferrite_core/: __init__.py  main.py
src/maiforge/: __init__.py
src/maiforge/api/: __init__.py
src/maiforge/core/: event.py  forge.py  loader.py
src/maiforge/installer/: installer.py
src/maiforge/mod/: __init__.py  container.py
src/maiforge/patch/: engine.py
src/maiforge/webui/: __init__.py  mod_page.py
